# rules_docker

./: MODULE.bazel
repositories/: extensions.bzl  repositories.bzl
