"rules_docker"

module(
    name = "io_bazel_rules_docker",
    version = "0.23.0",
    compatibility_level = 1,
    toolchains_to_register = [
        "@io_bazel_rules_docker//toolchains/docker:default_linux_toolchain",
        "@io_bazel_rules_docker//toolchains/docker:default_windows_toolchain",
        "@io_bazel_rules_docker//toolchains/docker:default_osx_toolchain",
    ]
)

bazel_dep(
    name = "platforms", 
    version = "0.0.4"
)

bazel_dep(
    name = "rules_cc",
    version = "0.0.1"
)

bazel_dep(
    name = "rules_python",
    version = "0.4.0",
)

bazel_dep(
    name = "bazel_skylib", 
    version = "1.1.1"
)

bazel_dep(
    name = "stardoc",
    repo_name = "io_bazel_stardoc",
    version = "0.5.0",
)

bazel_dep(
    name = "rules_pkg",
    version = "0.5.1",
)

bazel_dep(
    name = "io_bazel_rules_go",
    repo_name = "io_bazel_rules_go",
    version = "0.30.0",
)

docker = use_extension("@io_bazel_rules_docker//repositories:extensions.bzl", "docker")

use_repo(
    docker,
    "docker_config",
    "go_puller_linux_amd64"
)